--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 6 |  @import 'components/index';
+ *   |          ^^^^^^^^^^^^^^^^^^
+ *   '
+ *   scss/styles.scss 6:10  root stylesheet */
 
-
-/*# sourceMappingURL=styles.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 6 \2502   @import 'components/index';\a   \2502           ^^^^^^^^^^^^^^^^^^\a   \2575 \a   scss/styles.scss 6:10  root stylesheet";
+}
