--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,4 +3,4 @@
  /* ============================================= */
  @import 'utilities/index';
  @import 'base/index';
- @import 'components/index';
+ @import 'component/index';
